[tool.pdm]
[tool.pdm.dev-dependencies]
format = [
    "yapf>=0.32.0",
    "mypy>=0.991",
]
test = [
    "toml>=0.10.2",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Colinxu2020", email = "colinxu2020@gmail.com"},
]
dependencies = [
    "tomli>=2.0.1",
    "tomli-w>=1.0.0",
    "loguru>=0.6.0",
    "ursine>=0.3.1",  # render
    "multimethod>=1.9.1",
    "translate-toolkit[all]>=3.8.0",  # init->lang
    "py7zr>=0.20.2",  # 这个前置没有实际使用，依赖的库也很多，实在不想用可以注释掉
    "http3>=0.6.7",
    "pyobjc-core>=9.0.1",
]
requires-python = ">=3.9"
license = {text = "All Rights Reserved."}
[tool.yapf]
based_on_style = "google"
allow_multiline_lambdas = true
allow_multiline_dictionary_keys = true
